--- a/sse-web/public/index.html
+++ b/sse-web/public/index.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
 	<title>Svelte app</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
